# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.18 2004/02/13 02:41:26 drobbins Exp $

  12 Feb 2004; Daniel Robbins <drobbins@gentoo.org>: fixed bugs in previous
  feature additions (see 11 Feb 2004) and added support for a $clst_conf 
  environment variable. You can use the $clst_conf variable to point to
  a file to use in place of /etc/catalyst.conf. By setting this variable
  in your shell, catalyst can easily be used by multiple people on the
  same machine. Also, ccache support now works for genkernel.
  
  11 Feb 2004; Daniel Robbins <drobbins@gentoo.org>: removed file for
  livecd-stage2 target, as this is handled by the runscript now. Added support
  for "/boot/kernel/foo/use", "/boot/kernel/foo/packages," and made
  "/boot/kernel/foo/extraversion" an optional rather than required parameter.
  The aforementioned "packages" is used to specify kernel-related packages
  (like module ebuilds) to merge with each kernel, and the new "use" option is
  used to specify the USE settings you'd like exported to the environment
  during kernel as well as kernel "packages" build.

  10 Feb 2004; John Davis <zhen@gentoo.org> README, TODO, catalyst,
  modules/builder.py, modules/catalyst_support.py, modules/targets.py,
  targets/grp/grp.sh, targets/livecd-stage1/livecd-stage1.sh,
  targets/livecd-stage2/livecd-stage2.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2.sh, targets/stage3/stage3.sh,
  targets/tinderbox/tinderbox.sh:
  added envscripts support (fixes bug #39832) massive cleanup of tree to prepare
  it for ebuild - added headers to everything and removed deprecated dirs

  14 Jan 2004; zhen <zhen@gentoo.org> arch/mips.py, modules/targets.py:
  adding Kumba's patches for MIPS

  16 Dec 2003; Guy Martin <gmsoft@gentoo.org> : arch/hppa.py,modules/targets.py :
  Added hppa specific code.
