@@ -91,6 +91,12 @@ CONFIG_PROM_CONSOLE=y
 #
 CONFIG_FB=y
 CONFIG_DUMMY_CONSOLE=y
+# CONFIG_FB_LOGO_TUX is not set
+# CONFIG_FB_LOGO_LARRY is not set
+# CONFIG_FB_LOGO_GENTOO is not set
+CONFIG_FB_LOGO_G=y
+# CONFIG_FB_LOGO_PENGUIN is not set
+# CONFIG_FB_LOGO_POWEREDBY is not set
 # CONFIG_FB_RIVA is not set
 # CONFIG_FB_CLGEN is not set
 # CONFIG_FB_PM2 is not set
@@ -564,7 +570,7 @@ CONFIG_TMPFS=y
 CONFIG_RAMFS=y
 CONFIG_ISO9660_FS=y
 CONFIG_JOLIET=y
-# CONFIG_ZISOFS is not set
+CONFIG_ZISOFS=y
 # CONFIG_JFS_FS is not set
 # CONFIG_JFS_DEBUG is not set
 # CONFIG_JFS_STATISTICS is not set
@@ -614,7 +620,7 @@ CONFIG_NCPFS_OS2_NS=y
 CONFIG_NCPFS_SMALLDOS=y
 CONFIG_NCPFS_NLS=y
 CONFIG_NCPFS_EXTRAS=y
-# CONFIG_ZISOFS_FS is not set
+CONFIG_ZISOFS_FS=y
 
 #
 # Partition Types
@@ -872,3 +878,8 @@ CONFIG_CRC32=m
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 # CONFIG_FW_LOADER is not set
+
+#
+# Grsecurity
+#
+# CONFIG_GRKERNSEC is not set
