@@ -1,2 +1,2 @@
 #!/bin/bash
-mkisofs -J -R -l -o ../gentoo.iso  -G /boot/isofs.b -B ... .
+mkisofs -J -R -z -l -o ../gentoo.iso  -G /boot/isofs.b -B ... .
