@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.18 2004/02/13 02:41:26 drobbins Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.19 2004/02/13 05:23:20 zhen Exp $
+
+  13 Feb 2004; John Davis <zhen@gentoo.org> sparc64-isogen.sh, arch/sparc.py,
+  arch/sparc64.py, examples/livecd/runscript/sparc64-archscript.sh,
+  examples/livecd/sparc64/config-2.4.24-sparc64:
+  sparc fixups contributed by Gustavo Zacarias <gustavoz@gentoo.org>
 
   12 Feb 2004; Daniel Robbins <drobbins@gentoo.org>: fixed bugs in previous
   feature additions (see 11 Feb 2004) and added support for a $clst_conf 
